[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/mainmenu/Chose_level.png" type="Texture" id=1]
[ext_resource path="res://assets/mainmenu/New_game.png" type="Texture" id=2]
[ext_resource path="res://scenes/screens/MainMenu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/mainmenu/game_menu.png" type="Texture" id=4]
[ext_resource path="res://assets/mainmenu/Exit.png" type="Texture" id=5]
[ext_resource path="res://assets/mainmenu/Instructions.png" type="Texture" id=6]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_left = 0.0945206
margin_top = -0.25293
margin_right = 1200.09
margin_bottom = 627.747
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="TextureRect" parent="."]
margin_left = 791.358
margin_top = 325.587
margin_right = 1195.36
margin_bottom = 617.587
texture = ExtResource( 6 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 75.272
margin_top = 244.881
margin_right = 491.272
margin_bottom = 585.881
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="Menu"]
margin_right = 428.0
margin_bottom = 117.0
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseLevel" type="Button" parent="Menu"]
margin_top = 121.0
margin_right = 428.0
margin_bottom = 238.0
icon = ExtResource( 1 )
flat = true

[node name="Exit" type="Button" parent="Menu"]
margin_top = 242.0
margin_right = 428.0
margin_bottom = 359.0
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Menu/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Menu/ChooseLevel" to="." method="_on_ChooseLevel_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_Exit_pressed"]
